# CS1.6_FAKE_PLAYERS_MODULE

./: CMakeLists.txt  README.md
configs/: fake_monitor_nicks.ini  fake_monitor_players.ini
module/include/: fake_players_module.h
module/src/: fake_players_module.cpp
tests/: smoke.cpp
